Масштабирование слоев и синхронизация временной шкалы по формальному
изменению масштаба и скроллингу.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -272,6 +272,8 @@ $layersPanelButtonsHeight: 2rem;
 
     & #bmpp-timeline {
       grid-area: timeline;
+      width: 100%;
+      overflow: hidden;
     }
 
     & #bmpp-layersLayers {
