--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -274,6 +274,7 @@ $layersPanelButtonsHeight: 2rem;
       grid-area: timeline;
       width: 100%;
       overflow: hidden;
+      position: relative;
     }
 
     & #bmpp-layersLayers {
@@ -296,6 +297,58 @@ $layersPanelButtonsHeight: 2rem;
     }
   }
 }
+
+#bmpp-timelineCanvas {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+$tickColor: #aaa;
+
+#bmpp-timelineTicks1 {
+  position: absolute;
+  content: '';
+  height: 0.4rem;
+  width: 100%;
+  color: $tickColor; /* Это свойство используется в javascript
+                        при установке background-image */
+  background-image: repeating-linear-gradient(
+    90deg,
+    $tickColor, $tickColor 1px,
+    transparent 1px, transparent 2%
+  );
+  background-position-x: 0;
+  transition: background-image 0.5s ease;
+}
+
+#bmpp-timelineTicks2 {
+  position: absolute;
+  content: '';
+  height: 0.7rem;
+  width: 100%;
+  background-image: repeating-linear-gradient(
+    90deg,
+    $tickColor, $tickColor 1px,
+    transparent 1px, transparent 10%
+  );
+  background-position-x: 0;
+  transition: background-image 0.5s ease;
+}
+
+.bmpp-timeTag {
+  text-align: center;
+  font-size: x-small;
+  padding: 0;
+  margin: 0;
+  color: $tickColor;
+  position: absolute;
+  top: 0.7rem;
+  height: 1rem;
+}
+
 
 $layerHeight: 2rem;
 
