Выделение сегмента временной шкалы по двойному щелчку на сегменте слоя

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -402,6 +402,7 @@ $layerHeight: 2rem;
   padding: 0.35rem 0.5rem;
   font-size: smaller;
 
+  &:hover,
   .highlighted & {
     background-color: $lightGrey;
     border: 1px solid #aaa;
