Не подсвечивать сегменты слоев при выделении движением мыши

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -407,6 +407,11 @@ $layerHeight: 2rem;
     background-color: $lightGrey;
     border: 1px solid #aaa;
   }
+
+  .no-highlight &:hover {
+    background-color: #efefef;
+    border: 1px solid #ddd;
+  }
 }
 
 .bmpp-layerName {
