--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -315,7 +315,27 @@ $layersPanelButtonsHeight: 2rem;
     & #bmpp-layersButtons {
       grid-area: buttons;
       border-top: 1px solid $bmppBorderColor;
+
+      & ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      & ul li {
+        display: inline-block;
+        text-transform: uppercase;
+        margin: 0;
+        padding: 0.35em;
+        border-right: 1px solid $bmppBorderColor;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $bmppBorderColor;
+        }
+      }
     }
+
   }
 }
 
