Реализована подгрузка слоев для каждого примера
При этом по GET-параметру stub в урле приложения можно получать тестовые
результаты на любые запросы. Для тестовых результатов тестовые слои
будут загружаться только для первого примера, а для остальных будут
выполняться реальные запросы.

Обновил пакеты.

Настроил различные окружения для eslint (в gulpfile.js -- node, а не
browser, в воркере -- worker), чтобы он не подсвечивал ошибки
неправильно.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -594,6 +594,14 @@ $layerHeight: 2rem;
   }
 }
 
+.bmpp-resultsLoadPercent {
+  color: $grey;
+  font-size: xx-small;
+  position: absolute;
+  top: 0.3em;
+  right: 0.6em;
+}
+
 #bmpp-videoChoices {
   display: flex;
   flex-flow: column nowrap;
