--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -94,7 +94,7 @@ $videoHeight: 193px;
   z-index: 1001;
   border-left: $borderWidth solid transparent!important;
 
-  & .button {
+  & .button.bmpp-cancel {
     $colorChannels: 219, 40, 40;
     background-color: rgba(255, 255, 255, 1) !important;
     color: rgba($colorChannels, 0.5) !important;
