Разведены кнопка пуска/паузы видео и выбор режимов проигрыша
По умолчанию и при выборе нового результата -- всегда проигрывается
выделение. Кнопка выбора режима, если нажимается во время проигрыша
видео, то всегда перезапускает видео, а не ставит его на паузу. Кнопка
пуска на видео, а также кнопки запуска альтернативных вариантов видео
(N-vi, W-vi и т.п.) теперь чувствительна к режиму проигрыша.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -378,6 +378,13 @@ $layersPanelButtonsHeight: 2rem;
         &:hover {
           background-color: $bmppBorderColor;
         }
+
+        &.active {
+          background-color: green;
+          color: white;
+          font-weight: bold;
+          letter-spacing: 0.05em;
+        }
       }
 
       & ul + ul li:first-of-type {
