--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -348,6 +348,7 @@ $layersPanelButtonsHeight: 2rem;
         height: 100%;
         margin: 0;
         padding: 0;
+        overflow: hidden;
       }
     }
 
