Устранен регрессионный баг -- если слои по вертикали не помещались
в окно просмотра слоев, их нельзя было прокрутить вниз

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -345,10 +345,9 @@ $layersPanelButtonsHeight: 2rem;
 
       & #bmpp-layersCanvas {
         width: 100%;
-        height: 100%;
         margin: 0;
         padding: 0;
-        overflow: hidden;
+        overflow-x: hidden;
       }
     }
 
