В Firefox устранить наличие полосы прокрутки с бегунком на таймлайне
При этом важно было его не столько устранить совсем, сколько скрыть.
В Хроме полоса прокрутки на таймлайне должна присутствовать, чтобы
ширина окна и для слоев, и для таймлайна была одинаковой.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,6 +34,7 @@ $videoHeight: 193px;
 
 * {
   user-select: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .bmpp-uiLayout {
@@ -331,6 +332,7 @@ $layersPanelButtonsHeight: 2rem;
       position: relative;
 
       overflow-y: scroll; /* ##overflowy## */
+      scrollbar-color: transparent transparent;
       @mixin scrollbar #fff;
     }
 
